# regent

./: .env.example  .gitignore  README.md  Regent-Measurement-Decision-Framework.md  Regent-PRD.md  Regent-Plan.md  acceptance_test.py  alembic.ini  compose.yaml  dod_check.py  pyproject.toml  redeploy_p1.py  regent-p0-061.tgz  regent-p0-070.tgz  regent-p0-072.tgz  regent-p0-073.tgz  regent-p0-074.tgz  regent-p1-0014-20260718-new.tgz  regent-p1-0015-20260718-new.tgz  regent-p1-0016-20260718-new.tgz  regent-p1-0017-20260718-new.tgz  regent-p1-0018-20260718-new.tgz  regent-p1-0019-20260718-new.tgz  regent-p1-0021-20260718-new.tgz  regent-p1-0022-20260720.tgz  regent-p1-0022-r2-20260720.tgz
.github/workflows/: ci.yml
apps/regent-console/: Dockerfile  index.html
core/: Dockerfile  Dockerfile.incremental
core/migrations/: env.py
docs/: 0022-durable-app-execution.md  README.md  ai-practitioner-app-p1-requirements.md  ai-practitioner-app-validation-sequence.md  deployment.md  development.md  p0-completion-report.md  p1-ai-practitioner-product-requirements.md  p1-ai-practitioner-validation-contract.md  p1-coding-readiness-review.md  p1-core-capability-requirements.md  p1-core-coding-readiness-review.md  p1-core-final-technical-spec.md  p1-core-implementation-plan.md  p1-implementation-plan.md  p1-remaining-coding-plan.md  p2-platform-plan.md
docs/adr/: 0001-modular-monolith.md  0002-postgresql-runtime.md  0003-kernel-capability-boundary.md
docs/archive/: AgentOS-Implementation-Plan-v0.1.md  AgentOS-Implementation-Plan-v0.2.md  AgentOS-PRD-v1.md  README.md  (+5 more)
(+162 files in other folders)
