[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "regent-core"
version = "0.1.0"
description = "Reliable, governed goal execution core for Regent"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["mypy>=1.14,<2", "pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1"]

[project.scripts]
regent-api = "regent.api.main:run"
regent-worker = "regent.worker.main:run"

[tool.hatch.build.targets.wheel]
packages = ["core/src/regent"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["core/src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["regent"]
mypy_path = "core/src"
